force-app/main/default/objects/Extra_Line_Item__c/Extra_Line_Item__c.object-meta.xml
<CustomObject>
    <description>A child object of the Quick Quote Line Item, providing extra details like additional sets or extra Sound</description>
    <label>Extra Line Item</label>
    <nameField>
        <label>Extra Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Extra Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>