force-app/main/default/objects/Extra_Line_Item__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>Artist__c</referenceTo>
    <relationshipLabel>Extra Line Items</relationshipLabel>
    <relationshipName>Extra_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>