force-app/main/default/objects/Extra_Line_Item__c/fields/Quick_Quote_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Quick_Quote_Line_Item__c</fullName>
    <label>Quick Quote Line Item</label>
    <referenceTo>Quick_Quote_Line_Item__c</referenceTo>
    <relationshipLabel>Extra Line Items</relationshipLabel>
    <relationshipName>Extra_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>